jupyterhub-openshift/resources/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub
spec:
  host: jupyterhub.apps-crc.testing
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jupyterhub-proxy-public
    weight: 100
  wildcardPolicy: None
